<resources>
    <string name="app_name">Yanbal</string>
    <string name="welcome">Bienvenida</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="welcomeMessage">Bienvenida, %s</string>

    <string-array name="idTypes">
        <item>Cédula</item>
        <item>Pasaporte</item>
    </string-array>

    <string-array name="genres">
        <item>Femenino</item>
        <item>Masculino</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Selección de localización</string>

    <string name="order_register">Registro pedido</string>
    <string name="client">Cliente</string>
    <string name="add">Agregar</string>
    <string name="checking_availability">Verificando disponibilidad</string>
    <string name="item_added">Item agregado satisfactoriamente</string>
    <string name="product_not_found">Producto con el código %1s no encontrado o no disponible</string>
    <string name="select_client">Por favor selecciona un cliente antes de continuar.</string>
    <string name="add_item">Por favor agrega al menos un item para continuar.</string>
    <string name="ok">OK</string>

    <string-array name="campaigns">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="weeks">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="action_logout">Cerrar sesión</string>
</resources>
