<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.movil.tesis.yanbal.OrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/registerOrderButton"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@mipmap/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_register"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client" />

            <Spinner
                android:id="@+id/clientsSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/codeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="COD Producto"
                    android:inputType="number"
                    android:maxLength="4" />

                <EditText
                    android:id="@+id/quantityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Cantidad"
                    android:inputType="number"
                    android:maxLength="4" />
            </LinearLayout>

            <Button
                android:id="@+id/addItemButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    style="@style/cellHeader"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="COD PRO" />

                <TextView
                    style="@style/cellHeader"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="PU" />

                <TextView
                    style="@style/cellHeader"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="Desc" />

                <TextView
                    style="@style/cellHeader"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="Cantidad" />

                <TextView
                    style="@style/cellHeader"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="Total" />
            </TableRow>
        </TableLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

    </LinearLayout>

    <Button
        android:id="@+id/registerOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Registrar Pedido" />
</RelativeLayout>
